--- a/book/404.html
+++ b/book/404.html
@@ -84,7 +84,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="linux/fundamental.html"><strong aria-hidden="true">1.</strong> The Linux system</a></li><li class="chapter-item expanded "><a href="git/fundamental.html"><strong aria-hidden="true">2.</strong> Git</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="git/getting-started.html"><strong aria-hidden="true">2.1.</strong> Getting started</a></li><li class="chapter-item expanded "><a href="git/activity1.html"><strong aria-hidden="true">2.2.</strong> Activity</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="linux/linux-fundamental.html"><strong aria-hidden="true">1.</strong> The Linux system</a></li><li class="chapter-item expanded "><a href="git/fundamental.html"><strong aria-hidden="true">2.</strong> Git</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="git/getting-started.html"><strong aria-hidden="true">2.1.</strong> Getting started</a></li><li class="chapter-item expanded "><a href="git/activity1.html"><strong aria-hidden="true">2.2.</strong> Activity</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
